SG-2004-11-04-1: Bugfix:    the scheduler logs 2 error message, when job
                            was deleted by a user during a scheduling run
                            and that you was dispatched from the scheduler.
                 Issue:     1030
                 Changed:   qmaster
                 Review:    JG

SG-2004-11-04-0: Bugfix:    fixed the event master error messages
                 Changed:   qmaster
                 Review:    DT

CR-2004-11-04-0: Enhancm.:  commlib: added rresvport() (reserved port) support
                 Changed:   commlib
                 Review:    pending

SG-2004-11-03-0: Bugfix:    too many array tasks are deleted
                 Review:    EB
                 Changed:   qmaster
                 Issue:     1279
                 Bugtraq:   6190164

AH-2004-11-03-0: Bugfix:    qsub doesn't forward the AFS token, removed 
                            set_sec_cred call 
                            Reschedule unknown blocked host for all jobs of the
                            rescheduled job.
                 Review:    AA, SG
                 Changed:   scheduler, qsub
                 Issue:     1301

CR-2004-11-03-0: Enhancm.:  - commlib debug client support can be enabled via 
                              compile time definition "ENABLE_DEBUG_CLIENT" for 
                              execd and qmaster daemons. 
                              The binary "test_debug_client" can be used as
                              debug client.
                 Changed:   commlib, gdilib
                 Review:    AA

AD-2004-11-03-0: Bugfix:    '-m a' qsub option did leave a zombie process
                 Review:    EB
                 Changed:   qmaster
                 Issue:     1277
                 Bugtraq:   5104789
                 
CR-2004-11-02-1: Bugfix:    - fixed build

CR-2004-11-02-0: Enhancm.:  - added new commlib test binary: test_debug_client